<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/ImgDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/delete"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintBottom_toTopOf="@id/cvLessDetails"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/cvLessDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="@dimen/_10sdp"

        android:layout_margin="@dimen/_5sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">
            <TableRow android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/temperature"
                    android:gravity="center|start"/>
                <TextView
                    android:id="@+id/tvTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:textColor="@color/black"
                    android:text="@string/app_name"/>
            </TableRow>

            <TableRow android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/date"
                    android:gravity="center|start"/>
                <TextView
                    android:id="@+id/tvdate"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:gravity="center|start"
                    android:textColor="@color/black"
                    android:text="@string/app_name"/>

            </TableRow>
            <TextView
                android:id="@+id/tvLessDetails"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/more_details"
                android:layout_gravity="center|right"
                android:clickable="true"
                android:gravity="center"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="@dimen/_10sdp"
        android:visibility="gone"
        android:layout_margin="@dimen/_5sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">
            <TableRow android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/temperature"
                    android:gravity="center|start"/>
                <TextView
                    android:id="@+id/tvTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:textColor="@color/black"
                    android:text="@string/app_name"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/name"
                    android:gravity="center|start"/>
                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:textColor="@color/black"
                    android:text="@string/app_name"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/description"
                    android:gravity="center|start"/>
                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:textColor="@color/black"
                    android:text="@string/app_name"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/date"
                    android:gravity="center|start"/>
                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:gravity="center|start"
                    android:textColor="@color/black"
                    android:text="@string/app_name"/>

            </TableRow>
            <TextView
                android:id="@+id/tvMoreDetails"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/less_details"
                android:layout_gravity="center|right"
                android:clickable="true"
                android:gravity="center"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>